<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_movie"
        android:icon="@drawable/ic_movie"
        android:title="@string/movies"/>

    <item
        android:id="@+id/navigation_tvShow"
        android:icon="@drawable/ic_live_tv"
        android:title="@string/tv_shows"/>

    <item
        android:id="@+id/navigation_favourite"
        android:icon="@drawable/ic_favourite"
        android:title="@string/favourite" />


</menu>