<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="setting">settings</string>
    <string name="poster_preview">Preview Poster</string>
    <string name="bg_poster_preview">Background Poster Preview</string>
    <string name="title">Title</string>
    <string name="desc">Description</string>
    <string name="tv_shows">Tv Shows</string>
    <string name="storyboard">Storyboard</string>
    <string name="logo">Logo TMDB</string>
    <string name="movies">Movies</string>
    <string name="favourite">Favourite</string>
    <string name="keep_it_up_to_date">Keep it up to date</string>
    <string name="settings">Settings</string>
    <string name="change_language">Change Language</string>
    <string name="help">Help</string>
    <string name="message_undo">Batalkan menghapus item sebelumnya?</string>
    <string name="message_ok">OK</string>
    <string name="menu_favourite">Favourite</string>
</resources>